updated Makefile to include fortune

--- a/A00/Makefile
+++ b/A00/Makefile
@@ -1,5 +1,8 @@
 hello : hello.c
 	gcc hello.c -o hello
 
+fortune : fortune.c
+	gcc fortune.c -o fortune
+
 clean :
-	rm hello
+	rm hello fortune 2> /dev/null
